fix spacing for horizontal rules

--- a/src/scss/core/_inline.scss
+++ b/src/scss/core/_inline.scss
@@ -4,6 +4,7 @@
 blockquote,
 figure,
 h2, h3, h4, h5, h6,
+hr,
 ol,
 p,
 pre,
